--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@
 *.exe
 *.out
 *.app
+/SuperMarket_Application/.vs/SuperMarket_Application/v15/ipch/AutoPCH/c34e25a6f223acbb/STOCK.ipch
+/SuperMarket_Application/.vs/SuperMarket_Application/v15/Browse.VC.opendb
